--- a/HospitalGame/Views/Juego/Inicio.cshtml
+++ b/HospitalGame/Views/Juego/Inicio.cshtml
@@ -1,5 +1,4 @@
-﻿
-@{
+﻿@{
     ViewBag.Title = "Inicio";
 }
 @model List<String>
@@ -33,44 +32,52 @@
         margin: 10px;
     }
 </style>
+<script src="~/js/arrastrar.js"></script>
+<script src="~/js/EnviarAsincrono.js"></script>
+<script src="~/js/CuentaAtras.js"></script>
+<script src="~/js/Random.js"></script>
+<script src="~/js/ClickBoton.js"></script>
+<script>
+
+    //$("#formulario").submit(function () {
+    //    $.ajax({
+    //        type: 'POST',
+    //        url: ('Inicio'),
+    //        data: $(this).serialize(),
+    //        success: function (data) {
+    //            //countdown('countdown1', 0, 5);
+    //            //sleep(1000);
+    //            $("#boton").click();
+    //        }
+    //    })
+    //    return false;
+    //});
+</script>
+
 <script>
     $(function () {
-        $("#draggable").draggable();
-        $("#droppable").droppable({
-            drop: function (event, ui) {
-                $(this)
-                    .addClass("ui-state-highlight")
-                    .find("p")
-                    .html("Dropped!");
-            }
-        });
+        arrastrar();
     });
 </script>
 
 <script>
-
-    $(document).ready(function () {
-        setTimeout(clickbutton, 10);
-
-        function clickbutton() {
-            // simulamos el click del mouse en el boton del formulario
-            
-            $("#timer1").click();
+    /* FUNCIONES A ORDENAR---------------------------------------------------------
+     *
+     *  //FUNCIONES RANDOM
+     *
+     *  var i = Math.floor((Math.random() * 100) + 1);
+        var j = Math.floor((Math.random() * 10) + 1);
+        var k = Math.floor((Math.random() * 10) + 1);
+     *
+     function sleep(milliseconds) {
+            var start = new Date().getTime();
+            for (var i = 0; i < 1e7; i++) {
+                if ((new Date().getTime() - start) > milliseconds) {
+                    break;
+                }
+            }
         }
-
-
-        var saludo; var IDPaciente; var Nombre; var Apellido; var Edad; var Reloj;
-        var IDEnfermedad; var Baja; var Eliminado;
-        function countdown(element, minutes, seconds) {
-            // Fetch the display element
-            var el = document.getElementById(element);
-
-            // Set the timer
-            var interval = setInterval(function () {
-                if (seconds == 0) {
-                    if (minutes == 0) {
-                        (el.innerHTML = "STOP!");
-                       // var i = Math.floor((Math.random() * 100) + 1);
+        --------------ESTO RELLENA LAS CAJAS DEL FORMULARIO Y PULSA ENVIAR
                         $("#IDPaciente").val(i);
                         $("#Nombre").val(i);
                         $("#Apellido").val(i);
@@ -79,22 +86,22 @@
                         $("#IDEnfermedad").val(i);
                         $("#Baja").val(i);
                         $("#Eliminado").val(i);
-
-                        $("#formulario").submit(function () {
-                            $.ajax({
-                                type: 'POST',
-                                url: ('Inicio'),
-                                data: $(this).serialize(),
-                                success: function (data) {
-                                    countdown('countdown1', 0, 5);
-                                    $("#boton").click();
-                                }
-                            })
-                            return false;
-                        });
                         $("#boton").click();
+----------------------------------------------------------------------------------
+-------------------------LAS VARIABLES DEL FORMULARIO Y MAS-----------------------
+  var saludo; var IDPaciente; var Nombre; var Apellido; var Edad; var Reloj;
+  var IDEnfermedad; var Baja; var Eliminado;
+  -------------------------------------------------------------------------
+  -------------------------FUNCION CUENTA ATRAS----------------------------
+  function countdown(element, minutes, seconds) {
+            // Fetch the display element
+            var el = document.getElementById(element);
 
-
+            // Set the timer
+            var interval = setInterval(function () {
+                if (seconds == 0) {
+                    if (minutes == 0) {
+                        (el.innerHTML = "STOP!");//AQUI SE EJECUTA ALGO CUANDO FINALIZA LA CUENTA ATRAS
                         clearInterval(interval);
                         return;
                     } else {
@@ -114,25 +121,53 @@
                 seconds--;
             }, 1000);
         }
+ --------------------------------------------------------------------------------------------------
+
+
+
+
+
+
+
+     */
+</script>
+<script>
+
+    $(document).ready(function () {
+        var i;
+        setTimeout(clickbutton, 10);
+
+        //function clickbutton() {
+        //    // simulamos el click del mouse en el boton del formulario
+        //    $("#timer1").click(); $("#timer2").click(); $("#timer3").click();
+        //}
+        //clickbutton();
+
         var start1 = document.getElementById('timer1');
         var start2 = document.getElementById('timer2');
         var start3 = document.getElementById('timer3');
-        var i = Math.floor((Math.random() * 1) + 1);
-        var j = Math.floor((Math.random() * 10) + 1);
-        var k = Math.floor((Math.random() * 10) + 1);
+        var parar = document.getElementById('detener');
+
         start1.onclick = function () {
-            countdown('countdown1', 0, i);
+            i = Aleatorios(4);
+            new countdown('countdown1', 0, i);
         }
         start2.onclick = function () {
-            countdown('countdown2', 0, j);
+            i = Aleatorios(10);
+            new countdown('countdown2', 0, i);
         }
         start3.onclick = function () {
-            countdown('countdown3', 0, k);
+            i = Aleatorios(10); 
+            new countdown('countdown3', 0, i);
+        }
+        parar.onclick = function () {         
+            clearInterval(interval1); clearInterval(interval2); clearInterval(interval3);
         }
 
 
     });
 </script>
+
 
 <pruebas>
     @*<script>
@@ -148,26 +183,21 @@
         <script>
             /*String saludo, int IDPaciente, String Nombre, String Apellido, int Edad, int Reloj,
             int IDEnfermedad, String Baja, String Eliminado
-
             function timedAlert(msg, timing){
             setTimeout(function(){
             alert(msg);
             }, timing);
             }
-
             function yourFunction(time, counter){
             for (var i = 1; i <= counter; i++) {
             var msg = i, timing = i * time * 1000; //this is in seconds
             timedAlert (msg, timing);
             };
             }
-
             yourFunction(timeInSeconds, counter); // well here are the values of your choice.
-
             setTimeout(function () {
             alert("numero "+i);
             setTimeout(function () {
-
             alert("numero " + i);
             $("#IDPaciente").val(i).delay(2000);
             $("#Nombre").val(i);
@@ -177,17 +207,14 @@
             $("#IDEnfermedad").val(i);
             $("#Baja").val(i);
             $("#Eliminado").val(i);
-
             $("#boton").click();
-
-
-
             }, 1000);
-
             }, 1000);
             */
         </script>*@
 </pruebas>
+
+
 
 <h2>Inicio</h2>
 
@@ -215,6 +242,7 @@
 <input id="timer1" type="button" value="Start timer 1" />
 <input id="timer2" type="button" value="Start timer 2" />
 <input id="timer3" type="button" value="Start timer 3" />
+<input id="detener" type="button" value="Parar relojes" />
 @if (Model != null)
 {
     <ul>
@@ -234,27 +262,8 @@
 <div id="draggable" class="ui-widget-content">
     <p>Drag me to my target</p>
 </div>
-
-<div id="droppable" class="ui-widget-header">
-    <p>Drop here</p>
+<div id="dinamico">
+    @*<div id="droppable" class="ui-widget-header">
+        <p>Drop here</p>
+    </div>*@
 </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
